fix: pom adjustments and minor fixes